--- a/bm_search_nocase/bm_search_nocase.vcxproj.filters
+++ b/bm_search_nocase/bm_search_nocase.vcxproj.filters
@@ -15,15 +15,21 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="bm_search_nocase.cpp">
+    <ClCompile Include="su_bm.c">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="su_bm.c">
+    <ClCompile Include="bm_search_nocase_test.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="bm_search_nocase.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="su_bm.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="bm_search_nocase.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
