--- a/bm_search_nocase/bm_search_nocase.vcxproj.filters
+++ b/bm_search_nocase/bm_search_nocase.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClCompile Include="bm_search_nocase_test.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="bm_search_nocase.cpp">
+    <ClCompile Include="bm_search_nocase.c">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
